--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "astro": "^2.4.5",
     "astro-google-fonts-optimizer": "^0.2.2",
     "dayjs": "^1.11.7",
+    "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "yup": "^1.1.1"
   }
 }
