--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
+    "photoswipe": "^5.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
