--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invitation",
   "type": "module",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
-    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.2",
@@ -22,7 +22,7 @@
     "photoswipe": "^5.3.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^4.1.12",
     "yup": "^1.1.1"
   }
 }
